--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,10 @@ dependencies {
     testCompile "org.seleniumhq.selenium:selenium-support:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.14.0"
+
+    compile "org.grails.plugins:spring-security-core:4.0.0"
+    compile 'org.grails.plugins:spring-security-ui:4.0.0.M1'
+    compile "org.grails.plugins:mail:3.0.0"
 }
 
 bootRun {
