--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     compile "org.grails.plugins:spring-security-core:4.0.0"
     compile 'org.grails.plugins:spring-security-ui:4.0.0.M1'
     compile "org.grails.plugins:mail:3.0.0"
+    runtime 'mysql:mysql-connector-java:5.1.29'
 }
 
 bootRun {
