--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         classpath "org.grails.plugins:hibernate5:7.0.0"
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.0"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.0.10"
+     //   classpath 'org.grails.plugins:database-migration:3.1.0.RC1'
     }
 }
 
@@ -29,6 +30,14 @@ configurations {
     developmentOnly
     runtimeClasspath {
         extendsFrom developmentOnly
+    }
+}
+
+sourceSets {
+    main {
+        resources {
+            srcDir 'grails-app/migrations'
+        }
     }
 }
 
@@ -76,6 +85,10 @@ dependencies {
     compile 'org.grails.plugins:spring-security-ui:4.0.0.M1'
     compile "org.grails.plugins:mail:3.0.0"
     runtime 'mysql:mysql-connector-java:5.1.29'
+    //compile 'org.grails.plugins:greenmail:2.0.0.RC2'
+    //compile 'org.grails.plugins:database-migration:3.1.0.RC1'
+    //compile 'org.liquibase:liquibase-core:3.6.1'
+
 }
 
 bootRun {
