--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -141,3 +141,24 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+---
+grails:
+    mail:
+        port: 1025
+    serverURL: "http://localhost:8080/${appName}"
+---
+grails:
+    plugin:
+        databasemigration:
+            updateOnStart: true
+            updateOnStartFileName: changelog.groovy
+---
+grails:
+    plugin:
+        springsecurity:
+            ui:
+                register:
+                    defaultRoleNames: ['ROLE_CUSTOMER']
+                    requireEmailValidation: false
+                    postRegisterUrl: '/supplier'
+
