--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -119,6 +119,24 @@ environments:
             password: gr0up-buy!
             dialect: org.hibernate.dialect.MySQL5InnoDBDialect
             url: jdbc:mysql://ptah07.seeweb.it:3306/ilz_it_groupbuy
+            properties:
+                jmxEnabled: true
+                initialSize: 5
+                maxActive: 50
+                minIdle: 5
+                maxIdle: 25
+                maxWait: 10000
+                maxAge: 600000
+                timeBetweenEvictionRunsMillis: 5000
+                minEvictableIdleTimeMillis: 60000
+                validationQuery: SELECT 1
+                validationQueryTimeout: 3
+                validationInterval: 15000
+                testOnBorrow: true
+                testWhileIdle: true
+                testOnReturn: false
+                jdbcInterceptors: ConnectionState
+                defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
     production:
         dataSource:
             dbCreate: none
