--- a/build.gradle
+++ b/build.gradle
@@ -114,8 +114,9 @@ tasks.withType(Test) {
     systemProperty "webdriver.gecko.driver", System.getProperty('webdriver.gecko.driver')
 }
 
-
 assets {
     minifyJs = true
     minifyCss = true
+    enableSourceMaps = true
+    excludes = ["vue/*/","_vue/*/"]
 }
