new layout for pricelist 100% vuejs no angularjs

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -200,6 +200,7 @@ grails:
 grails:
     plugin:
         springsecurity:
+            active: true
             ui:
                 register:
                     defaultRoleNames: ['ROLE_CUSTOMER']
