--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -206,6 +206,9 @@ grails:
                     requireEmailValidation: false
                     postRegisterUrl: '/supplier'
 
+
+                gsp:
+                    layoutRegister: 'angular'
 ---
 grails:
     plugin:
