--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -191,7 +191,8 @@ environments:
 ---
 grails:
   mail:
-    port: 1025
+    port: 3025
+    host: vm8783.seewebcloud.it
     serverURL: "http://localhost:8080/${appName}"
 ---
 grails:
@@ -207,7 +208,7 @@ grails:
       ui:
         register:
           defaultRoleNames: ["ROLE_CUSTOMER"]
-          requireEmailValidation: false
+          requireEmailValidation: true
           postRegisterUrl: "/supplier"
 
         gsp:
