--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "org.grails.plugins:hibernate5:7.0.4"
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.0"
-        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.2.4"
+        //classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.2.4"
         classpath "org.grails.plugins:database-migration:3.1.0"
         classpath "org.grails.plugins:views-gradle:2.0.2"
     }
@@ -22,7 +22,7 @@ apply plugin:"org.grails.grails-web"
 apply plugin:"com.github.erdi.webdriver-binaries"
 apply plugin:"org.grails.grails-gsp"
 apply plugin:"org.grails.plugins.views-json"
-apply plugin:"com.bertramlabs.asset-pipeline"
+//apply plugin:"com.bertramlabs.asset-pipeline"
 
 repositories {
     maven { url "https://repo.grails.org/grails/core" }
@@ -73,7 +73,8 @@ dependencies {
     runtime "com.h2database:h2"
     runtime "org.apache.tomcat:tomcat-jdbc"
     runtime "javax.xml.bind:jaxb-api:2.3.1"
-    runtime "com.bertramlabs.plugins:asset-pipeline-grails:3.2.4"
+    //compileOnly "com.bertramlabs.plugins:asset-pipeline-core:3.2.4"
+    //runtime "com.bertramlabs.plugins:asset-pipeline-grails:3.2.4"
     testCompile "io.micronaut:micronaut-inject-groovy"
     testCompile "org.grails:grails-gorm-testing-support"
     testCompile "org.mockito:mockito-core"
@@ -89,7 +90,6 @@ dependencies {
     compile 'org.grails.plugins:spring-security-ui:4.0.0.M1'
     compile "org.grails.plugins:mail:3.0.0"
     runtime 'mysql:mysql-connector-java:5.1.29'
-    //compile 'org.grails.plugins:greenmail:2.0.0.RC2'
     compile 'org.grails.plugins:database-migration:3.1.0'
     compile 'org.liquibase:liquibase-core:3.6.1'
     compile "org.flywaydb:flyway-core:6.4.1"
@@ -125,9 +125,16 @@ tasks.withType(Test) {
     systemProperty "webdriver.gecko.driver", System.getProperty('webdriver.gecko.driver')
 }
 
-assets {
+//http://www.asset-pipeline.com/manual/index.html#configuration
+/*assets {
     minifyJs = false
     minifyCss = false
     enableSourceMaps = false
-    excludes = ["vue/*.js","vue/v-*/*"]
-}
+    configOptions = [:] //useful for custom config on extension libraries
+    minifyOptions = [
+        languageMode: 'ES6',
+        targetLanguage: 'ES6', //Can go from ES6 to ES5 for those bleeding edgers
+        optimizationLevel: 'WHITESPACE_ONLY' //SIMPLE or ADVANCED or WHITESPACE_ONLY
+    ]
+    excludes = ["vue/*.js","vue/v-* /*.js","vue/**","vue/** /*.js"]
+}*/
