--- a/scripts/proprioqui.conf
+++ b/scripts/proprioqui.conf
@@ -15,4 +15,20 @@
         SSLCertificateFile /etc/letsencrypt/live/proprioqui.it/fullchain.pem
         SSLCertificateKeyFile /etc/letsencrypt/live/proprioqui.it/privkey.pem
 </VirtualHost>
-
+<VirtualHost proprioqui.it:80>
+        ProxyPreserveHost On
+        ServerName proprioqui.it
+        ServerAlias proprioqui.it
+        RewriteEngine on
+        RewriteCond %{SERVER_NAME} =www.proprioqui.it
+        RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+</VirtualHost>
+<VirtualHost proprioqui.it:443>
+        ProxyPreserveHost On
+        ServerName proprioqui.it
+        ProxyPass "/" "http://127.0.0.1:8090/"
+        ProxyPassReverse "/" "http://127.0.0.1:8090/"
+        Include /etc/letsencrypt/options-ssl-apache.conf
+        SSLCertificateFile /etc/letsencrypt/live/proprioqui.it/fullchain.pem
+        SSLCertificateKeyFile /etc/letsencrypt/live/proprioqui.it/privkey.pem
+</VirtualHost>
